<resources>
    //Campos de mi aplicacion

    <string name="TilMostrar">Informacion Cliente</string>
    <string name="TilModificar">Modificar Cliente</string>
    <string name="TilDelete">Eliminar Cliente</string>

    <string name="app_name">Agenda</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_cedula">Cedula</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_correo_electronico">Correo electronico</string>

    //Botones
    <string name="btn_guarda">Guardar registro</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_Editar">Actualizar</string>

    //Item
    <string name="menu_nuevo">Nuevo registro</string>
    <string name="menu_salir">Salir</string>
</resources>