<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InformacionCli">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TilMostrar"
        android:textSize="20dp"
        android:layout_marginVertical="5dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginVertical="8dp"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/hint_apellido"
        android:textColor="#0E0E0E" />
    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginVertical="8dp"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_correo_electronico"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginVertical="8dp"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginVertical="8dp"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/hint_edad"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtMostraredad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_cedula"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/txtDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginVertical="8dp"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favEditar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="10dp"
        android:layout_weight=".1"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_edit"
        app:backgroundTint="@android:color/holo_blue_bright" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favDelete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="10dp"
        android:layout_weight=".1"
        android:clickable="true"
        android:layout_marginVertical="10dp"
        android:focusable="true"
        android:src="@drawable/ic_delete"
        app:backgroundTint="@android:color/holo_red_dark" />

</LinearLayout>